src/runtime/styles/index.scss
@use './mixins' as m;
@use './editor';

$paddingLeft: 28px;
$yfmAnchorWidth: 24px;

.heading-section {
    $class: &;

    &-content {
        display: none;
        padding-left: $paddingLeft;
        overflow: hidden;
        transition: height 0.3s ease-in-out;

        & > #{$class} {
            margin-left: -#{$paddingLeft};
        }
    }

    > h1,
    > h2,
    > h3,
    > h4,
    > h5,
    > h6 {
        cursor: pointer;

        @include m.chevron();

        .yfm-anchor {
            margin-left: -#{$yfmAnchorWidth + $paddingLeft}; // width of yfm-anchor (24px) + padding of heading (28px)
        }
    }

    > h1 {
        @include m.chevron_size_xl();
    }

    > h2,
    > h3 {
        @include m.chevron_size_l();
    }

    > h4 {
        @include m.chevron_size_m();
    }

    > h5 {
        @include m.chevron_size_s();
    }

    > h6 {
        @include m.chevron_size_xs();
    }

    &.open {
        > #{$class}-content {
            display: revert;
        }

        > h1,
        > h2,
        > h3,
        > h4,
        > h5,
        > h6 {
            @include m.chevron_open();
        }
    }
}

